[project]
name = "re-hcat-server"
version = "2.6.0"
description = "re_hcat-server is the server of the HCat chat room."
authors = [
    { name = "HCAT-Project-Team", email = "hcat@zzwl.top" },
]
dependencies = [
    "Flask",
    "flask-cors",
    "Werkzeug",
    "gevent>=23.9.0",
    "websockets",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pyaes",
    "pyjwt",
    "schedule",
    "gitpython",
    "pillow",
    "pymongo",
    "ZODB",
    "flask-socketio>=5.3.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "AGPL-3.0" }

[tool.pdm.scripts]
start = { call = "start:__main__" }
doc-gen = { call = "tools.doc_tool.generate:main" }
